@@ -19,7 +19,7 @@ module ElasticAPM
         end
 
         def add(key, filter)
-          @filters[key] = filter
+          @filters = @filters.merge(key => filter)
         end
 
         def remove(key)
